tests/invalid/bad_exported_mode.err_exp2
Mercury/ints/bad_exported_mode_helper_1.int:003: Error: `:- mode' declaration
Mercury/ints/bad_exported_mode_helper_1.int:003:   for predicate [38;5;87m`p'/2[39;49m [38;5;203mwithout[39;49m
Mercury/ints/bad_exported_mode_helper_1.int:003:   a corresponding `:- pred'
Mercury/ints/bad_exported_mode_helper_1.int:003:   declaration.
Mercury/ints/bad_exported_mode_helper_1.int:003: Inferred :- pred p(T1, T2).
